# idnoc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: build.rs  lib.rs  main.rs
src/bcg7tid/: Cargo.toml  F_IDNo.rs  l_n.rs  mod.rs
src/cg7tid/: Cargo.toml  f_IDNo.rs  l_n.rs  mod.rs
src/g7tidc/: Cargo.toml  f_IDNo.rs  l_n.rs  mod.rs
src/g7tidrc/: Cargo.toml  F_IDNo.rs  l_n.rs  mod.rs
src/rcg7tid/: Cargo.toml  R_IDNo.rs  l_n.rs  mod.rs
src/rg7tidc/: Cargo.toml  R_IDNo.rs  l_n.rs  mod.rs
