[package]
name = "cidno" #"cg7id"
version = "4.21.0" #"4.00"
authors = ["Karl Vincent Pierre Bertin <local-part@domain>", "Karl Thomas George West <local-part@domain>"]
edition = "2021"
#rust-version =
description = "An ID number calculator."
#documentation = ""
readme = "README.md"
repository = "https://github.com/kvpb/cidno" #"https://github.com/kvpb/cg7id"
#license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["non-random", "random", "generation", "i", "1", "g1", "iii", "3", "g3", "vii", "7", "g7", "trainer", "id", "g7id", "tid", "idno", "g7tid", "secret", "sid", "g7sid", "number", "shiny", "value", "tsv", "residual", "trv", "forward", "reverse", "backward", "calculator"]

[dependencies]
rand = "^0.8"
libm = "^0.2"
num-traits = "^0.2"

#[build-dependencies]
#

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'
#strip = "none"
#debug-assertions = true
overflow-checks = false
#lto = false
#panic = 'unwind'
incremental = true
#codegen-units = 256
#rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'
#strip = "none"
#debug-assertions = false
overflow-checks = false #overflow-checks = true
lto = true
panic = "abort"
#incremental = false
#codegen-units = 16
#rpath = false

#	Cargo.toml
#	CIDNo (IDNo Calculator)
#
#	Karl V. P. B. `kvpb`	AKA Karl Thomas George West `ktgw`
#	+33 A BB BB BB BB		+1 (DDD) DDD-DDDD
#	local-part@domain
#	https://x.com/ktgwkvpb
#	https://github.com/kvpb
