[package]
name = "cg7tid"
version = "1.2.0"
authors = ["Karl Vincent Pierre Bertin <local-part@domain>", "Karl Thomas George West <local-part@domain>"]
edition = "2021"
#rust-version =
description = "A generation VII trainer ID number calculator."
#documentation = ""
readme = "README.md"
repository = "https://github.com/kvpb/G7TIDcalculator"
#license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["generation", "i", "1", "g1", "iii", "3", "g3", "vii", "7", "g7", "trainer", "id", "g7id", "tid", "idno", "g7tid", "secret", "sid", "g7sid", "number", "shiny", "value", "tsv", "residual", "trv", "calculator"]

#[dependencies]
#

[lib]
name = "cg7tid"
path = "src/lib.rs"
#test = true
#doctest = false
#bench = false
#doc = false
#plugin = false
#proc-macro = false
#harness = false
edition = "2021"
crate-type = ["lib"]
#required-features = []

#	Cargo.toml
#	CG7TID (G7TID Calculator)
#
#	Karl V. P. B. `kvpb`	AKA Karl Thomas George West `ktgw`
#	+33 A BB BB BB BB		+1 (DDD) DDD-DDDD
#	local-part@domain
#	https://x.com/ktgwkvpb
#	https://github.com/kvpb
