[package]
name = "g7tidc"
version = "1.2.0"
authors = ["Karl Vincent Pierre Bertin <karl.v.p.bertin@gmail.com>", "Karl Thomas George West <karl.t.g.west@gmail.com>"]
edition = "2015"
#rust-version =
description = "A generation VII trainer ID number calculator."
#documentation = ""
readme = "README.md"
repository = "https://github.com/kvpb/G7TIDcalculator"
#license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["generation", "i", "1", "g1", "iii", "3", "g3", "vii", "7", "g7", "trainer", "id", "g7id", "tid", "idno", "g7tid", "secret", "sid", "g7sid", "number", "shiny", "value", "tsv", "residual", "trv", "calculator"]

#[dependencies]
#

[lib]
name = "g7tidc"
path = "src/lib.rs"
#test = true
#doctest = false
#bench = false
#doc = false
#plugin = false
#proc-macro = false
#harness = false
edition = "2015"
crate-type = ["lib"]
#required-features = []

#	Cargo.toml
#	G7TID Calculator
#
#	Karl V. P. B. `kvpb` AKA Karl Thomas George West `ktgw`
#	+1 (DDD) DDD-DDDD
#	+33 A BB BB BB BB
#	local-part@domain
#	local-part@domain
#	https://www.linkedin.com/in/
#	https://twitter.com/ktgwkvpb
#	https://github.com/kvpb
#	https://vm.tiktok.com/ZSwAmcFh/
